applications/meetingbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meet-bot
spec:
  selector:
    matchLabels:
      app: meet-bot
  template:
    metadata:
      labels:
        app: meet-bot
    spec:
      containers:
        - name: meet-bot
