applications/meetingbot/result.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"kubernetes.io/elb.class":"union","kubernetes.io/elb.id":"fc2766c8-33ac-48d5-861e-ae04dad6f47e","kubernetes.io/elb.lb-algorithm":"ROUND_ROBIN"},"name":"cveservice","namespace":"cve"},"spec":{"externalTrafficPolicy":"Cluster","loadBalancerIP":"159.138.7.136","ports":[{"name":"httpport","nodePort":31116,"port":80,"protocol":"TCP","targetPort":80},{"name":"httpsport","nodePort":31117,"port":443,"protocol":"TCP","targetPort":443}], [...]
    #kubernetes.io/elb.class: union
    #kubernetes.io/elb.id: fc2766c8-33ac-48d5-861e-ae04dad6f47e
    #kubernetes.io/elb.lb-algorithm: ROUND_ROBIN
    #kubernetes.io/elb.mark: "3"
  creationTimestamp: "2020-03-24T12:17:58Z"
  name: cveservice
  namespace: cve
  resourceVersion: "72404910"
  selfLink: /api/v1/namespaces/cve/services/cveservice
  uid: 7fd6d002-6dc9-11ea-b53d-fa163eb8d9d5
spec:
  clusterIP: 10.247.44.160
  externalTrafficPolicy: Cluster
  #loadBalancerIP: 159.138.7.136
  ports:
  - name: httpport
    nodePort: 31116
    port: 80
    protocol: TCP
    targetPort: 80
  - name: httpsport
    nodePort: 31117
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: cveinfo
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 159.138.7.136
