applications/meetingbot/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: meeting-ingress
spec:
  tls:
    - hosts:
        - meetings.openeuler.org
      secretName: meeting-tls
  rules:
    - host: meetings.openeuler.org
      http:
        paths:
          - backend:
              serviceName: meetbot-service
              servicePort: 80
            path: /
